tests/ui/undefined_variable.stderr
error: Shell lint issues:
         [SC2086] Double quote to prevent globbing and word splitting on $UNDEFINED_VAR
 --> tests/ui/undefined_variable.rs:8:26
  |
8 |             command(cmd!("echo $UNDEFINED_VAR")).key("test")
  |                          ^^^^^^^^^^^^^^^^^^^^^
